--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo:               'assets/img/logo.png'
 background:         'assets/img/placeholder-new.jpeg'
 tiled_bg:           true   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
-url:                https://zp-nines.github.io/nines/
+url:                https://zp-nines.github.io/nines
 
 # Jekyll
 permalink:          /:title/
